<resources>
    <string name="app_name">SmartLook</string>
    <string name="please_wait">Пожалуйста подождите…</string>
    <string name="enter_email">Ваш Email</string>
    <string name="enter_password">Ваш пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="forget_password">Забыл пароль?</string>
    <string name="invalid_email">Некорректный email</string>
    <string name="invalid_password">Некорректный пароль</string>
    <string name="check_internet_connection">Проверьте интернет-соединение</string>
    <string name="invalid_email_or_password">Неправильный email или пароль</string>
    <string name="error_auth">Не удалось авторизоваться, пожалуйста попробуйте позже</string>
    <string name="enter_name">Введите имя</string>
    <string name="select_gender">Укажите пол</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="error_user_not_found">Такого пользователя не существует</string>
    <string name="error_user_not_created">Ошибка при созданий пользователя</string>
    <string name="cancel">Отмена</string>
    <string name="choose">Выбрать</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="enter_birth_date">Укажите дату рождения</string>
    <string name="required_field">Обязательное поле</string>
    <string name="not_equal_passwords">Не одинаковые пароли</string>
    <string name="name_should_be_more">Имя должна содержать больше 2 символов</string>
    <string name="error_auth_user_collision">Пользователь с таким email уже существует</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="mail_for_restore_password_sent">На вашу почту была отправлена письмо для восстановления пароля</string>
    <string name="title_feed">Главная</string>
    <string name="title_articles">Статьи</string>
    <string name="title_profile">Профиль</string>
    <string name="main_bottom_navigation_feed">Feed</string>
    <string name="main_bottom_navigation_articles">Responses</string>
    <string name="main_bottom_navigation_profile">Profile</string>
    <string name="password_requirements">Пароль должен отвечать следующим требованиям:\n
        * Длина пароля должна быть не менее 6 символов;\n
        * Как минимум одна заглавная и одна строчная буква;\n
        * Только латинские буквы;\n
        * Как минимум одна цифра;\n
        * Только арабские цифры;\n
        * Без пробелов;\n
        * Другие допустимые символы:@ # $ % ^ &amp; + =;</string>
    <string name="log_out">Выйти</string>
    <string name="favorites">Избранные</string>
    <string name="about_app">О приложений</string>
    <string name="contact_us">Связаться с нами</string>
    <string name="on_dev">Разработчики все еще работают над этим</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="save">Сохранить</string>
    <string name="edit">Изменить</string>
    <string name="your_name">Ваше имя</string>
    <string name="birth_date">Дата рождения</string>
    <string name="success_saved">Успешно сохранено</string>
    <string name="choose_from_gallery">Выбрать из галереи</string>
    <string name="delete">Удалить</string>
    <string name="error_getting_image_from_gallery">Ошибка при получений фотографий из галереи</string>
    <string name="success">Успешно</string>
    <string name="error_upload_image">Не удалось загрузить фото</string>
    <string name="start_upload_image">Начинаем загрузку</string>
    <string name="error_load_user">Не удалось получить пользователя</string>
    <string name="permission_denied_title">Доступ к геолокации отклонен</string>
    <string name="permission_denied_message">Разрешите доступ к вашей геолокации для лучшей работы приложения</string>
    <string name="no_thanks">Нет, спасибо</string>
    <string name="okey">Хорошо</string>
    <string name="settings">Настройки</string>
    <string name="error_load_weather">Не удалось получить данные по погоде</string>
    <string name="feels_like">Ощущается как</string>
    <string name="today">Сегодня</string>
    <string name="city_name_format">%s, %s</string>
    <string name="positive_temperature_format">+%d°</string>
    <string name="negative_temperature_format">%d°</string>
    <string name="empty_outlets_title">Список нарядов пуст</string>
    <string name="empty_outlets_description">Обновите приложение чтобы отобразились наряды подготовленные вам</string>
    <string name="empty_articles_title">Функционал недоступен</string>
    <string name="empty_articles_description">Данный функционал находится в разработке</string>
    <string name="unisex">Унисекс</string>
    <string name="winter">Зима</string>
    <string name="demi_season">Демисезон</string>
    <string name="summer">Лето</string>
    <string name="retry">Повторить</string>
    <string name="error_load_articles">Не удалось обновить статьи</string>
    <string name="logout_message_title">Вы уверены?</string>
    <string name="logout_message_description">Вы уверены что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="similar_outfits">Похожие</string>
    <string name="error_favorite_save">Не удалось сохранить в избранные</string>
    <string name="error_favorite_delete">Не удалось удалить из избранных</string>
    <string name="empty_favorites_title">Список избранных пуст</string>
    <string name="empty_favorites_description">Добавьте наряды в избранные чтобы увидеть их тут</string>
    <string name="error_log_out">Не удалось выполнить выход</string>
</resources>