<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_navigation_graph"
    app:startDestination="@id/signInFragment">

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.akerimtay.smartwardrobe.auth.ui.signIn.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_signInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_signInFragment_to_forgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.akerimtay.smartwardrobe.auth.ui.signUp.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up" />

    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.akerimtay.smartwardrobe.auth.ui.forgotPassword.ForgotPasswordFragment"
        android:label="@string/forget_password"
        tools:layout="@layout/fragment_forgot_password" />

</navigation>