<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/AppTheme.MaterialToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/menu_profile_edit"
            app:navigationIcon="@drawable/ic_round_keyboard_arrow_left_white"
            app:title="@string/edit_profile" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/avatar_image_view"
                android:layout_width="@dimen/user_avatar_size"
                android:layout_height="@dimen/user_avatar_size"
                android:layout_margin="16dp"
                android:adjustViewBounds="false"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:riv_border_color="@color/colorWhite"
                app:riv_oval="true"
                tools:src="@tools:sample/avatars" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_button"
                style="@style/AppTheme.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textAppearance="@style/textStyleBold14"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/avatar_image_view" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input_layout"
                style="@style/AppTheme.TextInputLayoutOutlinedBoxWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/your_name"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/edit_button">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    style="@style/AppTheme.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapSentences|textAutoCorrect|textAutoComplete" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birth_date_text_input_layout"
                style="@style/AppTheme.TextInputLayoutOutlinedBoxWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/birth_date"
                app:endIconDrawable="@drawable/ic_twotone_calendar_today_white"
                app:endIconMode="custom"
                app:endIconTint="@color/colorWhiteAlpha60"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/name_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birth_date_edit_text"
                    style="@style/AppTheme.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/birth_date_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="@id/birth_date_text_input_layout"
                app:layout_constraintEnd_toEndOf="@id/birth_date_text_input_layout"
                app:layout_constraintStart_toStartOf="@id/birth_date_text_input_layout"
                app:layout_constraintTop_toTopOf="@id/birth_date_text_input_layout" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <com.akerimtay.smartwardrobe.common.ui.ProgressStateView
                android:id="@+id/progress_state_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:translationZ="100dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:text="@string/please_wait" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>